--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -7,7 +7,7 @@
     tools:context=".SecondActivity">
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/editTextSecond"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -20,4 +20,14 @@
         android:textSize="26sp"
         android:layout_marginHorizontal="8dp"
         android:autofillHints="true"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/saveBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSecond"
+        android:layout_marginTop="32dp"
+        android:text="@string/save_button_name"
+        android:textAllCaps="false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
