--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -143,6 +143,7 @@
         android:id="@+id/flowChips"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         app:constraint_referenced_ids="MoscowTV, KazanTV,RostovOnDonTV,MinskTV,GomelTV"
         app:flow_horizontalBias="0"
         app:flow_horizontalGap="10dp"
@@ -151,20 +152,19 @@
         app:flow_wrapMode="chain"
         app:layout_constraintEnd_toStartOf="@id/endSpace"
         app:layout_constraintStart_toEndOf="@id/startSpace"
-        app:layout_constraintTop_toBottomOf="@id/officesTitle"
-        android:layout_marginTop="4dp"/>
+        app:layout_constraintTop_toBottomOf="@id/officesTitle" />
 
     <Button
         android:id="@+id/contactsBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
         android:text="@string/contacts_btn_title"
         app:layout_constraintEnd_toStartOf="@+id/vacanciesBtn"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@id/startSpace"
-        app:layout_constraintTop_toBottomOf="@id/flowChips"
-        android:layout_marginEnd="4dp"
-        android:layout_marginTop="4dp"/>
+        app:layout_constraintTop_toBottomOf="@id/flowChips" />
 
     <Button
         android:id="@+id/vacanciesBtn"
@@ -179,30 +179,33 @@
         android:id="@+id/galleryBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/gallery"
         android:layout_marginStart="4dp"
+        android:text="@string/gallery"
         app:layout_constraintEnd_toStartOf="@id/endSpace"
         app:layout_constraintStart_toEndOf="@id/vacanciesBtn"
         app:layout_constraintTop_toTopOf="@id/contactsBtn" />
+
     <androidx.constraintlayout.widget.Group
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/bottomButtonsGroup"
-        app:constraint_referenced_ids="contactsBtn, vacanciesBtn, galleryBtn"/>
-    <androidx.constraintlayout.widget.Group
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:constraint_referenced_ids="contactsBtn, vacanciesBtn, galleryBtn" />
+
+    <androidx.constraintlayout.widget.Group
         android:id="@+id/progress_group"
-        app:constraint_referenced_ids="bottomButtonsGroup, officesTitle, flowChips"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="bottomButtonsGroup,officesTitle,flowChips" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:visibility="invisible"
         android:indeterminateTint="@color/aston_color"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/aboutUsContent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/aboutUsContent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
