--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -41,39 +41,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/logoImageView"
-        android:layout_width="92dp"
-        android:layout_height="92dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/logo_aston"
-        app:layout_constraintStart_toEndOf="@id/startVertSpace"
-        app:layout_constraintTop_toBottomOf="@id/headerImageView" />
-
-    <TextView
-        android:id="@+id/titleTextView"
-        style="@style/TitleStyle"
+    <com.lesson.sergeev_lesson2.AstonCardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:text="@string/title_text"
-        app:layout_constraintBottom_toTopOf="@+id/subtitleTextView"
-        app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
-        app:layout_constraintStart_toEndOf="@+id/logoImageView"
-        app:layout_constraintTop_toTopOf="@+id/logoImageView"
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <TextView
-        android:id="@+id/subtitleTextView"
-        style="@style/SubtitleStyle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/sub_title_text"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
-        app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
-        app:layout_constraintStart_toEndOf="@id/logoImageView"
-        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+        android:id="@+id/astonCardView"
+        android:layout_marginHorizontal="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/headerImageView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuideline"/>
 
     <TextView
         android:id="@+id/aboutUsTitle"
@@ -104,7 +79,7 @@
         android:text="@string/offices_title"
         app:layout_constraintEnd_toEndOf="@id/verticalGuideline"
         app:layout_constraintStart_toEndOf="@id/startVertSpace"
-        app:layout_constraintTop_toBottomOf="@+id/aboutUsContent" />
+        app:layout_constraintTop_toBottomOf="@+id/astonCardView" />
 
     <TextView
         android:id="@+id/MoscowTV"
