--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -6,17 +6,17 @@
         android:id="@+id/mainScreenBottomBtn"
         android:enabled="true"
         android:icon="@drawable/home_icon_silhouette_svgrepo_com"
-        android:title="home"/>
+        android:title="@string/home_title_bnb"/>
     <item
         android:id="@+id/vacancyBottomBtn"
         android:enabled="true"
         android:icon="@drawable/baseline_vacancy"
-        android:title="vacancies"
+        android:title="@string/vacancies_title_bnb"
         app:itemIconSize="48dp"/>
     <item
         android:id="@+id/officesBottomBtn"
         android:enabled="true"
         android:icon="@drawable/offices_buildings_svgrepo_com"
-        android:title="offices"
+        android:title="@string/offices_title_bnb"
         app:itemIconSize="48dp"/>
 </menu>
