--- a/app/src/main/res/values-ru/strings-ru.xml
+++ b/app/src/main/res/values-ru/strings-ru.xml
@@ -19,4 +19,7 @@
     <string name="greeting">Приветствуем вас в Aston</string>
     <string name="title_text_example">Android trainee</string>
     <string name="subtitle_text_example">Стажировка по направлению Android</string>
+    <string name="home_title_bnb">Главная</string>
+    <string name="vacancies_title_bnb">Вакансии</string>
+    <string name="offices_title_bnb">Офисы</string>
 </resources>
