--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,14 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".LoginFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <EditText
+        android:id="@+id/loginEditText"
+        android:layout_marginTop="50dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/startSpaceL"
+        app:layout_constraintEnd_toStartOf="@id/endSpaceL"
+        app:layout_constraintTop_toTopOf="parent"
+        android:autofillHints="false"
+        android:inputType="text"
+        android:padding="16dp"
+        android:background="@drawable/edit_text_background"/>
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/loginEditText"
+        app:layout_constraintTop_toTopOf="@id/loginEditText"
+        app:layout_constraintBottom_toBottomOf="@id/loginEditText"
+        android:text="@string/hint_login"
+        android:background="@color/white"
+        android:padding="4dp"
+        android:layout_marginBottom="52dp"
+        android:layout_marginStart="32dp"/>
+    <EditText
+        android:id="@+id/passwordEditText"
+        android:layout_marginTop="20dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@+id/startSpaceL"
+        app:layout_constraintEnd_toStartOf="@id/endSpaceL"
+        app:layout_constraintTop_toBottomOf="@+id/loginEditText"
+        android:autofillHints="false"
+        android:inputType="textPassword"
+        android:padding="16dp"
+        android:background="@drawable/edit_text_background"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/passwordEditText"
+        app:layout_constraintTop_toTopOf="@id/passwordEditText"
+        app:layout_constraintBottom_toBottomOf="@id/passwordEditText"
+        android:layout_marginBottom="52dp"
+        android:layout_marginStart="32dp"
+        android:text="@string/hint_password"
+        android:background="@color/white"
+        android:padding="4dp"/>
+    <Space
+        android:layout_width="16dp"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/startSpaceL"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <Space
+        android:layout_width="16dp"
+        android:layout_height="match_parent"
+        android:id="@+id/endSpaceL"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
