--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activity.MainActivity">
 
     <ImageView
         android:id="@+id/headerImageView"
@@ -37,7 +37,7 @@
         app:constraint_referenced_ids="headerImageView"
         app:layout_constraintTop_toBottomOf="@+id/headerImageView" />
 
-    <com.lesson.sergeev_lesson2.AstonCardView
+    <com.lesson.sergeev_lesson2.cardCustomView.AstonCardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/astonCardView"
