--- a/app/src/main/res/values-ru/strings-ru.xml
+++ b/app/src/main/res/values-ru/strings-ru.xml
@@ -24,4 +24,7 @@
     <string name="offices_title_bnb">Офисы</string>
     <string name="hint_login">Имя</string>
     <string name="hint_password">Пароль</string>
+    <string name="login_title_enter">Вход</string>
+    <string name="login_btn_title">Войти</string>
+    <string name="password_error_text">Неправильный пароль</string>
 </resources>
