--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="aston_color">#2987E4</color>
     <color name="grey">#B9B8B8</color>
+    <color name="red">#F40F0F</color>
 </resources>
