--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
         app:menu="@menu/bottom_navigation_menu"
         app:labelVisibilityMode="unlabeled"
         app:itemIconSize="32dp"
+        android:background="@color/aston_color"
         app:itemTextColor="@color/bottom_nav_color"
         app:itemIconTint="@color/bottom_nav_color"/>
     </LinearLayout>
