--- a/app/src/main/res/layout/fragment_vacancies.xml
+++ b/app/src/main/res/layout/fragment_vacancies.xml
@@ -1,6 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/vacanciesRecyclerView">
-</androidx.recyclerview.widget.RecyclerView>
+    android:layout_height="match_parent">
+
+    <EditText
+        android:id="@+id/searchVacancyEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="16dp"
+        android:autofillHints="false"
+        android:background="@drawable/edit_text_background"
+        android:hint="@string/find_hint"
+        android:inputType="text"
+        android:paddingHorizontal="30dp"
+        android:paddingVertical="8dp"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vacanciesRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchVacancyEditText" />
+</androidx.constraintlayout.widget.ConstraintLayout>
