--- a/app/src/main/res/values-ru/strings-ru.xml
+++ b/app/src/main/res/values-ru/strings-ru.xml
@@ -49,4 +49,5 @@
     <string name="minskOfficeDesription">пр-т Победителей, 7А</string>
     <string name="gomelOfficeName">Гомель</string>
     <string name="gomelOfficeDesription">ул. Советская, 41Б</string>
+    <string name="find_hint">Введите запрос</string>
 </resources>
